
             • new argument ‘method.Pych.threshold_factor’ added to
               have a better control for the threshold value used for
               the removal,

             • new argument ‘MARGIN’ added to allow the application of
               the methods along the wavelength or the time,

             • set default method to ‘smooth’.

         • ‘calc_FadingCorr()’

             • Table column headers now have all capital letters,

             • minor performance improvements,

             • for very large standard errors uniroot failed, causing a
               function break; corrected (#270),

             • if uniroot is not able to solve the equation during the
               MC runs the function will not stop anymore with an
               error.

         • ‘calc_OSLLxTxRatio()’

             • New argument ‘digits’ introduced to allow direct
               rounding of the numbers,

             • add argument ‘sig0’ to allow for an extra component of
               error.

         • ‘calc_Statistics()’

             • MCM-option added.

         • ‘extrac_IrradiationTimes()’

             • Function now supports the self call mode, i.e. a ‘list’
               of ‘RLum.Analysis’ objects can be provided as input and
               the function iterates of this list.

         • ‘fit_LMCurve()’

             • Fix bug that caused a function break if data set
               contained 0 time values but a log-scale was wanted; now
               the ‘xlim’ is adjusted and a warning is given.

         • ‘merge_RLum.Data.Curve()’

             • Support further merge operations: ‘median’, ‘var’, ‘sd’,
               ‘min’, ‘max’.

         • ‘plot_AbanicoPlot()’

             • Fixed a bug where the function failed to get input data
               from ‘RLum.Results’ objects.

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'